background darker and subtitle change

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="container jumbo-text text-center">
         <h1 class="display-4">Patrick Johns</h1>
         <hr class="main-hr" />
-        <p class="lead"> - Producer - Presenter - Musician - Educator - </p>
+        <p class="subtitle">Producer - Presenter - Musician - Educator</p>
 
 
       </div>
