meta viewport info

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <meta http-equiv="X-UA-Compatible" content="ie=edge">
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/style.css">
   <title>Patrick Johns</title>
@@ -58,45 +58,57 @@
   </section>
   <div class='container'>
     <div class='row'>
-      <div class='col-md-5 col-lg-4 text-center'>
-        <img class='headshot' src='assets/images/pj.JPG' />
-      </div>
-      <div class='col-md-7 col-lg-8'>
+
+      <div class='col main-content mx-auto'>
+        <div class='text-center'>
+          <img class='headshot' src='assets/images/pj.JPG' />
+        </div>
+
         <h2 class="section-title">About Patrick</h2>
-        <p class='intro-text'>
-          Patrick is a freelance musician with a varied portfolio ranging from producing hit radio shows for the BBC,
-          advisor to EDEXCEL A-level music, performing across the globe, and writing a sell-out comedy show for the Edinburgh Fringe.
+        <hr class="col-hr" />
+
+        <p class='intro-text mx-auto'>
+          Patrick Johns is a much in-demand freelancer, with a hugely varied portfolio. This ranges from producing hit radio shows for BBC Radio, presenting live reports for ABC Radio (Australia), to performing across the globe, writing numerous
+          arrangements, plus writing and starring in a 5* sell-out comedy show for the Edinburgh Fringe.
+          <br /><br />
+
+          After studying classical music at The University of Nottingham, Patrick worked as an editor on the New Grove Dictionary of Music alongside production at Jazz FM, before becoming a producer at BBC Radio, working on Jazz and Contemporary
+          Music programmes. Since 2007, he has been freelance, producing TV and Radio music programmes.
+          <br /><br />
+
+          Patrick has also forged a successful freelance career as a professional musician, singing on adverts and choral CDs; and as a trombonist, performing and/or recording with acts as varied as ska legend Prince Buster, bluegrass band Hayseed
+          Dixie, rockney giants Chas ’n’ Dave, various Jazz bands, and legends in lederhosen, Oompah Brass, whom he also fronts at over 100 shows a year.
+          <br /><br />
+          Patrick’s brass, orchestral and choral arrangements and compositions have been heard on BBC 1, ITV and Channel 4, as well as Radios 1, 2, 3, 4, 5 and 6, and in venues such as Ronnie Scott’s, Bristol Cathedral and the Royal Festival Hall. He
+          writes choral arrangements for Sing Up! and his brass arrangements are soon to be published by Superbrass Publishing.
+          <br /><br />
+          His educational work includes classroom teaching, peripatetic teaching (lower brass, bass guitar), workshops and Outreach programmes, being a music expert for Ofqual, and being a guest speaker at music educational conferences.
+          <br /><br />
+          Patrick lives in London with his wife and three children, and enjoys watching Marx Brothers films, drinking leaf tea, and being unnecessarily pedantic about grammar.
+          <br /><br />
+          Click on the links below to find out more.
         </p>
 
-        <p class='intro-text'>
-          After studing music at Nottingham University, Patrick went on to work for Grove Music Dictionary before becoming a producer at the BBC.
-          Patrick was also forging a freelance career as a profesional trombonist, performing and recording for popular Ska band, "Brass Volcanoes", reaching no.1 in the charts.
-          Patrick's arrangements and compositions are regularly performed and his works have been published by ....
-        </p>
-<div class='btn-group port-btns'>
-  <a class="btn btn-outline-secondary" href="£">Radio and TV<i class="fas fa-angle-double-right"></i></a>
-  <a class="btn btn-outline-secondary" href="£">Composer<i class="fas fa-angle-double-right"></i></a>
-  <a class="btn btn-outline-secondary" href="£">Performer<i class="fas fa-angle-double-right"></i></a>
-  <a class="btn btn-outline-secondary" href="£">Educator<i class="fas fa-angle-double-right"></i></a>
+    <div class='btn-group port-btns'>
+      <a class="btn btn-outline-secondary" href="£">Radio and TV<i class="fas fa-angle-double-right"></i></a>
+      <a class="btn btn-outline-secondary" href="£">Composer<i class="fas fa-angle-double-right"></i></a>
+      <a class="btn btn-outline-secondary" href="£">Performer<i class="fas fa-angle-double-right"></i></a>
+      <a class="btn btn-outline-secondary" href="£">Educator<i class="fas fa-angle-double-right"></i></a>
+    </div>
+
+  </div>
 </div>
 
-
-
-      </div>
-
-    </div>
   </div>
   <footer>
     <div class='footer'>
-<div>
-  <ul class='icon-list'>
-    <li><a href="£" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-    <li><a href="£"><i class="fab fa-facebook" target="_blank"></i></a></li>
-      <li><a href="£"><i class="fab fa-twitter" target="_blank"></i></a></li>
-        <li><a href="£"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
-    <li><a href="contact.html"><i class="fas fa-envelope"></i></a></li>
-  </ul>
-</div>
+      <div>
+        <ul class='icon-list'>
+          <li><a href="£" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="£"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
+          <li><a href="contact.html"><i class="fas fa-envelope"></i></a></li>
+        </ul>
+      </div>
 
       <p class='website-by'>
         Website by <a href="£">Lucy Wilson</a>
