--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="mynav navbar navbar-expand-lg navbar-dark">
-
+    <a class="logo navbar-brand" href="index.html">PJ</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,7 +21,7 @@
     <div class="nav-items collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="mynav-link nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="mynav-link nav-link" href="#">About <span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item dropdown">
@@ -29,7 +29,7 @@
             Portfolio
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Producer - Writer - Presenter</a>
+            <a class="dropdown-item" href="producer.html">Producer - Writer - Presenter</a>
             <a class="dropdown-item" href="#">Arranger - Composer</a>
             <a class="dropdown-item" href="#">Performer</a>
             <a class="dropdown-item" href="#">Educator</a>
@@ -45,7 +45,7 @@
 
     </div>
   </nav>
-  <section id="hero" class="jumbo-img" data-type="background" data-speed="5">
+  <header id="hero" class="header-img jumbo-img" data-type="background" data-speed="5">
     <article>
       <div class="container jumbo-text text-center">
         <h1 class="display-4">Patrick Johns</h1>
@@ -55,7 +55,7 @@
 
       </div>
     </article>
-  </section>
+  </header>
   <div class='container'>
     <div class='row'>
 
@@ -89,17 +89,54 @@
           Click on the links below to find out more.
         </p>
 
-    <div class='btn-group port-btns'>
-      <a class="btn btn-outline-secondary" href="£">Radio and TV<i class="fas fa-angle-double-right"></i></a>
-      <a class="btn btn-outline-secondary" href="£">Composer<i class="fas fa-angle-double-right"></i></a>
-      <a class="btn btn-outline-secondary" href="£">Performer<i class="fas fa-angle-double-right"></i></a>
-      <a class="btn btn-outline-secondary" href="£">Educator<i class="fas fa-angle-double-right"></i></a>
+        <div class='btn-group port-btns'>
+          <a class="btn btn-outline-secondary" href="£">Radio and TV<i class="fas fa-angle-double-right"></i></a>
+          <a class="btn btn-outline-secondary" href="£">Composer<i class="fas fa-angle-double-right"></i></a>
+          <a class="btn btn-outline-secondary" href="£">Performer<i class="fas fa-angle-double-right"></i></a>
+          <a class="btn btn-outline-secondary" href="£">Educator<i class="fas fa-angle-double-right"></i></a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <section>
+    <div class='container-fluid biog-section'>
+      <div class='row'>
+        <div class='col-md-4'>
+          <img />
+
+        </div>
+        <div class='col-md-8'>
+          <h3>Producer - Presenter - Writer</h3>
+          <p>
+            Patrick has been a freelance producer/presenter since 2007, following seven years at BBC Radio 3, working in production across programmes such as Jazz Record Requests, Hear & Now, In Tune, Voices, and Late Junction.
+<br /><br />
+He writes and presents the Music Education podcast Teaching Notes, and is the UK correspondent for ABC Overnights on Australian national radio.
+<br /><br />
+Patrick wrote and co-presented an episode of BBC Radio 3’s The Early Music Show, on the subject of Catch Clubs and Glee Clubs of the 17th and 18th Centuries, and also presented the show “Patrick Johns’ Jazz Night” on internet radio.
+<br /><br />
+<audio controls>
+  <source src="myAudio.mp3" type="audio/mpeg">
+  <source src="myAudio.ogg" type="audio/ogg">
+  <p>Your browser doesn't support HTML5 audio. Here is
+     a <a href="myAudio.mp4">link to the audio</a> instead.</p>
+</audio>
+
+Patrick has produced numerous documentaries and music shows for BBC Radio 2, including Jazz Junctions (2010), Country Christmas (2016) and the highly-acclaimed Top Brass (2018), presented by James Morrison.
+<br /><br />
+Patrick has been interviewed on live radio by many of the UK’s top presenters, including Chris Evans, Dermot O’Leary, Danny Baker, Sean Keaveny, and Stuart Maconie.
+<br /><br />
+
+As a script-writer, Patrick worked for several years on Oman Classics, and the BBC Jazz Awards, as well as writing scripts for Radio 2, Radio 3 and for Qantas Airways in-house jazz documentaries, and he has had the pleasure of interviewing some of the top names in music including Burt Bacharach, McCoy Tyner, Annie Ross, Buddy DeFranco, Emilio Castillo and Jimmy Pankow.
+
+
+          </p>
+        </div>
+      </div>
     </div>
 
-  </div>
-</div>
+  </section>
 
-  </div>
   <footer>
     <div class='footer'>
       <div>
