--- a/producer.html
+++ b/producer.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/style.css">
-  <title>Patrick Johns</title>
+  <title>Patrick Johns | Producer - Presenter</title>
 </head>
 
 <body>
@@ -29,10 +29,10 @@
             Portfolio
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item active" href="producer.html">Producer - Writer - Presenter</a>
-            <a class="dropdown-item" href="#">Arranger - Composer</a>
-            <a class="dropdown-item" href="#">Performer</a>
-            <a class="dropdown-item" href="#">Educator</a>
+            <a class="drop dropdown-item active" href="producer.html">Producer - Writer - Presenter</a>
+            <a class="drop dropdown-item" href="composer.html">Arranger - Composer</a>
+            <a class="drop dropdown-item" href="performer.html">Performer</a>
+            <a class="drop dropdown-item" href="educator.html">Educator</a>
           </div>
         </li>
         <li class="nav-item">
@@ -76,7 +76,7 @@
         </div>
         <div class='col-lg-7 port-content mx-auto'>
 
-          <p class='intro-text producer-text mx-auto'>
+          <p class='intro-text producer-text ptext mx-auto'>
             Patrick has been a freelance producer/presenter since 2007, following seven years at BBC Radio 3, working in production across programmes such as Jazz Record Requests, Hear & Now, In Tune, Voices, and Late Junction.
 <br /><br />
 He writes and presents the Music Education podcast Teaching Notes, and is the UK correspondent for ABC Overnights on Australian national radio.
@@ -107,7 +107,7 @@ Patrick wrote and co-presented an episode of BBC Radio 3’s The Early Music Sho
     <p class='intro-text producer-text mx-auto'>
       Patrick has produced numerous documentaries and music shows for BBC Radio 2, including Jazz Junctions (2010), Country Christmas (2016) and the highly-acclaimed Top Brass (2018), presented by James Morrison.
       <br /><br />
-      Patrick has been interviewed on live radio by many of the UK’s top presenters, including Chris Evans, Dermot O’Leary, Danny Baker, Sean Keaveny, and Stuart Maconie.
+      Patrick has been interviewed on live radio by many of the UK’s top presenters, including Chris Evans, Danny Baker, Sean Keaveny, and Stuart Maconie.
       <br /><br /></p>
 <hr class="col-hr" />
 </div>
@@ -135,11 +135,12 @@ Patrick wrote and co-presented an episode of BBC Radio 3’s The Early Music Sho
       </p>
 
       <div class='btn-group port-btns'>
-        <a  aria-disabled="true"  class="disabled btn btn-outline-secondary" href="£">Radio and TV<i class="fas fa-angle-double-right"></i></a>
-        <a class="btn btn-outline-secondary" href="£">Composer<i class="fas fa-angle-double-right"></i></a>
-        <a class="btn btn-outline-secondary" href="£">Performer<i class="fas fa-angle-double-right"></i></a>
-        <a class="btn btn-outline-secondary" href="£">Educator<i class="fas fa-angle-double-right"></i></a>
+        <a class="disabled mydisabled btn btn-outline-secondary" href="producer.html">Producer<i class="fas fa-angle-double-right"></i></a>
+        <a class="btn btn-outline-secondary" href="composer.html">Composer<i class="fas fa-angle-double-right"></i></a>
+        <a class="btn btn-outline-secondary" href="performer.html">Performer<i class="fas fa-angle-double-right"></i></a>
+        <a class="btn btn-outline-secondary" href="educator.html">Educator<i class="fas fa-angle-double-right"></i></a>
       </div>
+
 
 </div>
 </div>
@@ -160,7 +161,7 @@ Patrick wrote and co-presented an episode of BBC Radio 3’s The Early Music Sho
       </div>
 
       <p class='website-by'>
-        Website by <a href="£">Lucy Wilson</a>
+        Website by <a href="http://lucywilson.me/">Lucy Wilson</a>
       </p>
     </div>
   </footer>
