--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
             Portfolio
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="producer.html">Producer - Writer - Presenter</a>
-            <a class="dropdown-item" href="#">Arranger - Composer</a>
-            <a class="dropdown-item" href="#">Performer</a>
-            <a class="dropdown-item" href="#">Educator</a>
+            <a class="drop dropdown-item" href="producer.html">Producer - Writer - Presenter</a>
+            <a class="drop dropdown-item" href="composer.html">Arranger - Composer</a>
+            <a class="drop dropdown-item" href="performer.html">Performer</a>
+            <a class="drop dropdown-item" href="educator.html">Educator</a>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="mynav-link nav-link" href="#">Podcast</a>
-        </li>
+
         <li class="nav-item">
           <a class="mynav-link nav-link" href="#">Contact</a>
         </li>
@@ -72,7 +70,7 @@
           arrangements, plus writing and starring in a 5* sell-out comedy show for the Edinburgh Fringe.
           <br /><br />
 
-          After studying classical music at The University of Nottingham, Patrick worked as an editor on the New Grove Dictionary of Music alongside production at Jazz FM, before becoming a producer at BBC Radio, working on Jazz and Contemporary
+          After studying classical music at The University of Nottingham, Patrick worked as an editor on the New Grove Dictionary of Music alongside production at Jazz FM, before moving to BBC Radio 3, working on Jazz and Contemporary
           Music programmes. Since 2007, he has been freelance, producing TV and Radio music programmes.
           <br /><br />
 
@@ -90,52 +88,17 @@
         </p>
 
         <div class='btn-group port-btns'>
-          <a class="btn btn-outline-secondary" href="£">Radio and TV<i class="fas fa-angle-double-right"></i></a>
-          <a class="btn btn-outline-secondary" href="£">Composer<i class="fas fa-angle-double-right"></i></a>
-          <a class="btn btn-outline-secondary" href="£">Performer<i class="fas fa-angle-double-right"></i></a>
-          <a class="btn btn-outline-secondary" href="£">Educator<i class="fas fa-angle-double-right"></i></a>
+          <a class="btn btn-outline-secondary" href="producer.html">Producer<i class="fas fa-angle-double-right"></i></a>
+          <a class="btn btn-outline-secondary" href="composer.html">Composer<i class="fas fa-angle-double-right"></i></a>
+          <a class="btn btn-outline-secondary" href="performer.html">Performer<i class="fas fa-angle-double-right"></i></a>
+          <a class="btn btn-outline-secondary" href="educator.html">Educator<i class="fas fa-angle-double-right"></i></a>
         </div>
 
       </div>
     </div>
   </div>
-  <section>
-    <div class='container-fluid biog-section'>
-      <div class='row'>
-        <div class='col-md-4'>
-          <img />
-
-        </div>
-        <div class='col-md-8'>
-          <h3>Producer - Presenter - Writer</h3>
-          <p>
-            Patrick has been a freelance producer/presenter since 2007, following seven years at BBC Radio 3, working in production across programmes such as Jazz Record Requests, Hear & Now, In Tune, Voices, and Late Junction.
-<br /><br />
-He writes and presents the Music Education podcast Teaching Notes, and is the UK correspondent for ABC Overnights on Australian national radio.
-<br /><br />
-Patrick wrote and co-presented an episode of BBC Radio 3’s The Early Music Show, on the subject of Catch Clubs and Glee Clubs of the 17th and 18th Centuries, and also presented the show “Patrick Johns’ Jazz Night” on internet radio.
-<br /><br />
-<audio controls>
-  <source src="myAudio.mp3" type="audio/mpeg">
-  <source src="myAudio.ogg" type="audio/ogg">
-  <p>Your browser doesn't support HTML5 audio. Here is
-     a <a href="myAudio.mp4">link to the audio</a> instead.</p>
-</audio>
-
-Patrick has produced numerous documentaries and music shows for BBC Radio 2, including Jazz Junctions (2010), Country Christmas (2016) and the highly-acclaimed Top Brass (2018), presented by James Morrison.
-<br /><br />
-Patrick has been interviewed on live radio by many of the UK’s top presenters, including Chris Evans, Dermot O’Leary, Danny Baker, Sean Keaveny, and Stuart Maconie.
-<br /><br />
-
-As a script-writer, Patrick worked for several years on Oman Classics, and the BBC Jazz Awards, as well as writing scripts for Radio 2, Radio 3 and for Qantas Airways in-house jazz documentaries, and he has had the pleasure of interviewing some of the top names in music including Burt Bacharach, McCoy Tyner, Annie Ross, Buddy DeFranco, Emilio Castillo and Jimmy Pankow.
 
 
-          </p>
-        </div>
-      </div>
-    </div>
-
-  </section>
 
   <footer>
     <div class='footer'>
@@ -148,7 +111,7 @@ As a script-writer, Patrick worked for several years on Oman Classics, and the B
       </div>
 
       <p class='website-by'>
-        Website by <a href="£">Lucy Wilson</a>
+        Website by <a href="http://lucywilson.me/">Lucy Wilson</a>
       </p>
     </div>
   </footer>
