--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/style.css">
+  <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("user_OFdAhUR3QErMz82Ms1R7B");
+        })();
+    </script>
   <title>Patrick Johns | Performer</title>
 </head>
 
@@ -47,25 +53,44 @@
     <article>
       <div class="container jumbo-text text-center">
 
-        <h2 class="section-title">Performer</h2>
+        <h2 class="section-title">Contact</h2>
 
       </div>
     </article>
   </header>
-<div class='container mt-4 text-center'>
-  <h4>
-    Page under construction - coming soon!
-    </h4>
+  <div class='container mt-4 text-center'>
+    <p class=''>Please send me a message using the form below. I will get back to you as soon as possible.</p>
+            <div class="message">
+                <p class="success-text">Thanks! Your message has been sent</p>
+            </div>
+            <div class="error-message">
+                <p class="success-text">Oops... this is awkward. Something's gone wrong</p>
+            </div>
+            <div class='contact-form'>
+                <form onsubmit="return sendMail(this);" method='POST'>
+
+                    <div class='form-group'>
+                        <label for="name"></label>
+                        <input class='form-control' type="text" id="name" name="name" placeholder='Name' required></div>
+
+
+                    <div class='form-group'>
+                        <label for="mail"></label>
+                        <input class='form-control' type="email" id="email" name="email" placeholder='Email' required></div>
+
+
+                    <div class='form-group'>
+                        <label for="msg"></label>
+                        <textarea class='form-control' id="message" name="message" placeholder='Message' required></textarea></div>
+
+                    <div class="button">
+                        <button class='btn btn-success' contact-page-btn' type="submit">Send Message</button></div>
+                </form>
 
 
 
-      <div class='btn-group port-btns'>
-        <a class="btn btn-outline-secondary" href="producer.html">Producer<i class="fas fa-angle-double-right"></i></a>
-        <a class="btn btn-outline-secondary" href="composer.html">Composer<i class="fas fa-angle-double-right"></i></a>
-        <a class="disabled mydisabled btn btn-outline-secondary" href="performer.html">Performer<i class="fas fa-angle-double-right"></i></a>
-        <a class="btn btn-outline-secondary" href="educator.html">Educator<i class="fas fa-angle-double-right"></i></a>
-      </div>
-      </div>
+
+  </div>
 
 
 
@@ -93,5 +118,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
   <script type="text/javascript" src="assets/main.js"></script>
+  <script type="text/javascript" src="assets/sendEmail.js"></script>
 
 </html>
