--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="mynav-link nav-link" href="#">Contact</a>
+          <a class="mynav-link nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
 
