--- a/producer.html
+++ b/producer.html
@@ -35,11 +35,9 @@
             <a class="drop dropdown-item" href="educator.html">Educator</a>
           </div>
         </li>
+
         <li class="nav-item">
-          <a class="mynav-link nav-link" href="#">Podcast</a>
-        </li>
-        <li class="nav-item">
-          <a class="mynav-link nav-link" href="#">Contact</a>
+          <a class="mynav-link nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
 
