--- a/composer.html
+++ b/composer.html
@@ -89,7 +89,7 @@
         <div class='col'>
 
           <div class='video-container text-center'>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Jdobowvu12I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Jdobowvu12I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p class='port-text text-center mx-auto pt-1'>
               Arranger for orchestra and brass quintet <br /> <em>Bohemian Rhapsody</em>
             </p>
