background js removed

--- a/composer.html
+++ b/composer.html
@@ -57,9 +57,9 @@
     <div class='container-fluid biog-section'>
       <div class='row'>
         <div class='col-md-4 text-center'>
-          <a href="http://www.superbrass.co.uk/about-our-music.html"><img class='arr-img'
+          <a href="http://www.superbrass.co.uk/about-our-music.html"><img class='arr-img mt-4'
               src="https://ksr-ugc.imgix.net/assets/011/439/337/c66811446cd5601f37d6b56fecf8a0bb_original.jpg?ixlib=rb-1.1.0&w=460&fit=max&v=1463682757&auto=format&frame=1&q=92&s=e3255c517b8e17b9e2130e3409334789" /></a>
-          <a href="https://www.singup.org/"><img class='arr-img' src="https://www.singup.org/uploads/tx_su2news/sing-up-logo-strap.png" /></a>
+          <a href="https://www.singup.org/"><img class='arr-img mt-4' src="https://www.singup.org/uploads/tx_su2news/sing-up-logo-strap.png" /></a>
         </div>
         <div class='col-md-8'>
 
@@ -79,10 +79,11 @@
               <br /><br />
               TV arranging work includes <em>Last Choir Standing</em> (BBC 1) and the <em>Mad Bad Ad Show </em>(Channel 4).
               <br /><br />
-              Patrick creates bespoke wedding arrangements for the company <a class='text-link' href="https://www.mywaymusic.co.uk">My Way Music</a>
+              Patrick creates bespoke wedding arrangements for the company <a class='text-link' href="https://www.mywaymusic.co.uk">My Way Music</a>.
 
           </div>
         </div>
+
       </div>
 
       <div class='row'>
@@ -105,7 +106,10 @@
                   <li><strong>We Will Remember Them:</strong> Remembrance Day piece for SATB and orchestra (premiered in November 2018 at Bristol Cathedral’s Festival of Remembrance)</li>
                   <li><strong>September Groove:</strong> for brass band (written for the charity <a href="http://brassforafrica.org/" class='text-link'>Brass for Africa</a>)</li>
                   </ul>
+<div class='text-center sound'>
+  <iframe  scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/743272176&color=%233c3630&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 
+</div>
 <div class='text-center'>
   <a href="https://www.sheetmusicplus.com/publishers/patrick-johns-sheet-music/3010139?isPLP=1" class="comp-btn btn btn-lg btn-outline-light">Buy Patrick's Music</a>
 
@@ -139,8 +143,8 @@
     <div class='footer'>
       <div>
         <ul class='icon-list'>
-          <li><a href="£" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-          <li><a href="£"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/patrick-johns-7884b02a/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://soundcloud.com/mywaymusicuk"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
           <li><a href="contact.html"><i class="fas fa-envelope"></i></a></li>
         </ul>
       </div>
@@ -156,6 +160,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
-  <script type="text/javascript" src="assets/main.js"></script>
+
 
 </html>
