--- a/performer.html
+++ b/performer.html
@@ -75,8 +75,8 @@
     <div class='footer'>
       <div>
         <ul class='icon-list'>
-          <li><a href="£" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-          <li><a href="£"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/patrick-johns-7884b02a/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://soundcloud.com/mywaymusicuk"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
           <li><a href="contact.html"><i class="fas fa-envelope"></i></a></li>
         </ul>
       </div>
@@ -92,6 +92,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
-  <script type="text/javascript" src="assets/main.js"></script>
+  
 
 </html>
