--- a/composer.html
+++ b/composer.html
@@ -111,7 +111,7 @@
 
 </div>
 <div class='text-center'>
-  <a href="https://www.sheetmusicplus.com/publishers/patrick-johns-sheet-music/3010139?isPLP=1" class="comp-btn btn btn-lg btn-outline-light">Buy Patrick's Music</a>
+  <a href="https://www.sheetmusicplus.com/publishers/patrick-johns-sheet-music/3010139?isPLP=1" class="comp-btn btn btn-lg btn-outline-light"><i class="fas fa-music mr-3"></i>Buy Patrick's Music</a>
 
   </div>
 
