--- a/performer.html
+++ b/performer.html
@@ -43,7 +43,7 @@
 
     </div>
   </nav>
-  <header id="hero" class="header-img composer-img" data-type="background" data-speed="5">
+  <header id="hero" class="header-img performer-img" data-type="background" data-speed="5">
     <article>
       <div class="container jumbo-text text-center">
 
@@ -52,24 +52,64 @@
       </div>
     </article>
   </header>
-<div class='container mt-4 text-center'>
-  <h4>
-    Page under construction - coming soon!
-    </h4>
+  <section>
+    <div class='container-fluid biog-section'>
+      <div class='row'>
+        <div class="col-md-5 text-center">
+          <img class='perf-img' src="assets/images/pinktrb.jpg"/>
+
+          </div>
+
+        <div class='col-md-7'>
 
 
 
-      <div class='btn-group port-btns'>
-        <a class="btn btn-outline-secondary" href="producer.html">Producer<i class="fas fa-angle-double-right"></i></a>
-        <a class="btn btn-outline-secondary" href="composer.html">Composer<i class="fas fa-angle-double-right"></i></a>
-        <a class="disabled mydisabled btn btn-outline-secondary" href="performer.html">Performer<i class="fas fa-angle-double-right"></i></a>
-        <a class="btn btn-outline-secondary" href="educator.html">Educator<i class="fas fa-angle-double-right"></i></a>
+            <p class='intro-text mx-auto perf-text'>
+              Patrick has been a professional trombonist for 20 years, playing in a wide variety of ensemble, either as a regular member or as a guest, including:
+            </p>
+
+
+
+            <ul class='comp-list'>
+              <li><a class='text-link' href='http://oompahbrass.com'>Oompah Brass</a>, the UK’s leading Oktoberfest band and exponents of Oompop</li>
+              <li>Big-name acts such as Michael Ball, Robert Lindsay and Emma Thompson</li>
+              <li>Bands such as Chas ’n’ Dave and Hayseed Dixie</li>
+              <li>The Noblemen and Gentlemen’s Catch Club</li>
+              <li>Orchestras, including the Symphony Orchestra of India</li>
+              <li>Ska acts, including Prince Buster and The Dualers (including two top 25 hits)</li>
+              <li>London Vegetable Orchestra, playing 1st Butternut Squash</li>
+            </ul>
+
+            <p class='intro-text mx-auto mt-4'>
+              Patrick has performed at all the main London jazz and classical venues, and at many UK festivals such at Bestival, Isle of Wight Festival and the London Jazz Festival.
+              <br /><br />
+              TV work includes Odd One In (ITV), Mad Bad Ad Show (Channel 4), whilst advertising work includes H&M (with Tony Bennett and Lady Gaga), Johnnie Walker (with Jude Law), and Victim Support (national campaign).
+              <br /><br />
+              Patrick starred in two 5* sell-out shows at the Edinburgh Fringe: “The A to Z of Oompah”, and “Blow Up! The Credit Crunch Musical”, which won praise across the regional and national press.
+              <br /><br />
+              He also gigs (less frequently!) on bass guitar, drums, tuba and guitar (his singing days are mostly behind him).
+            </p>
+
+            <div class='btn-group port-btns'>
+              <a class="btn btn-outline-secondary" href="producer.html">Producer<i class="fas fa-angle-double-right"></i></a>
+              <a class="btn btn-outline-secondary" href="composer.html">Composer<i class="fas fa-angle-double-right"></i></a>
+              <a class="disabled mydisabled btn btn-outline-secondary" href="performer.html">Performer<i class="fas fa-angle-double-right"></i></a>
+              <a class="btn btn-outline-secondary" href="educator.html">Educator<i class="fas fa-angle-double-right"></i></a>
+            </div>
+
+
+          </div>
+
+
+        </div>
+        <div class='row'>
+          <div class='col text-center'>
+              <img class='band-img' src="assets/images/oktoberfest.jpg"/>
+            </div>
+
+          </div>
       </div>
-      </div>
-
-
-
-
+  </section>
 
   <footer>
     <div class='footer'>
@@ -92,6 +132,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
-  
+
+
 
 </html>
