--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/style.css">
   <title>Patrick Johns</title>
@@ -14,7 +15,8 @@
 <body>
   <nav class="mynav navbar navbar-expand-lg navbar-dark">
     <a class="logo navbar-brand" href="index.html">PJ</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -25,7 +27,8 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="mynav-link nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="mynav-link nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Portfolio
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -55,7 +58,7 @@
     </article>
   </header>
   <div class='container'>
-    <div class='row'>
+    <div class='row justify-content-md-center'>
 
       <div class='col main-content mx-auto'>
         <div class='text-center'>
@@ -66,32 +69,38 @@
         <hr class="col-hr" />
 
         <p class='intro-text mx-auto'>
-          Patrick Johns is a much in-demand freelancer, with a hugely varied portfolio. This ranges from producing hit radio shows for BBC Radio, presenting live reports for ABC Radio (Australia), to performing across the globe, writing numerous
-          arrangements, plus writing and starring in a 5* sell-out comedy show for the Edinburgh Fringe.
-          <br /><br />
+          Patrick Johns is a much in-demand freelancer, with a hugely varied portfolio: </p>
 
-          After studying classical music at The University of Nottingham, Patrick worked as an editor on the New Grove Dictionary of Music alongside production at Jazz FM, before moving to BBC Radio 3, working on Jazz and Contemporary
-          Music programmes. Since 2007, he has been freelance, producing TV and Radio music programmes.
-          <br /><br />
 
-          Patrick has also forged a successful freelance career as a professional musician, singing on adverts and choral CDs; and as a trombonist, performing and/or recording with acts as varied as ska legend Prince Buster, bluegrass band Hayseed
-          Dixie, rockney giants Chas ’n’ Dave, various Jazz bands, and legends in lederhosen, Oompah Brass, whom he also fronts at over 100 shows a year.
-          <br /><br />
-          Patrick’s brass, orchestral and choral arrangements and compositions have been heard on BBC 1, ITV and Channel 4, as well as Radios 1, 2, 3, 4, 5 and 6, and in venues such as Ronnie Scott’s, Bristol Cathedral and the Royal Festival Hall. He
-          writes choral arrangements for Sing Up! and his brass arrangements are soon to be published by Superbrass Publishing.
-          <br /><br />
-          His educational work includes classroom teaching, peripatetic teaching (lower brass, bass guitar), workshops and Outreach programmes, being a music expert for Ofqual, and being a guest speaker at music educational conferences.
-          <br /><br />
-          Patrick lives in London with his wife and three children, and enjoys watching Marx Brothers films, drinking leaf tea, and being unnecessarily pedantic about grammar.
-          <br /><br />
-          Click on the links below to find out more.
-        </p>
+        <ul>
+          <li>Presenting live features on Scala Radio and ABC Radio (Australia) </li>
+          <li>Producing radio programmes for BBC Radio 2 and BBC Radio 3 </li>
+          <li>Presenting and producing the UK’s no.1 Music Education podcast, Teaching Notes </li>
+          <li>Performing across the globe with numerous bands and orchestras </li>
+          <li>Writing numerous arrangements for choirs, brass groups and orchestras </li>
+          <li>Writing numerous educational resources</li>
+          <li>Writing and starring in a 5* sell-out comedy show for the Edinburgh Fring </li>
+        </ul>
+
+
+
+        <p>Patrick lives in London with his wife and three children, and enjoys watching Marx Brothers films, drinking
+          leaf tea, and being unnecessarily pedantic about grammar. </p>
+
+
+
+        <p>Click on the links below to find out more. </p>
+
 
         <div class='btn-group port-btns'>
-          <a class="btn btn-outline-secondary" href="producer.html">Producer<i class="fas fa-angle-double-right"></i></a>
-          <a class="btn btn-outline-secondary" href="composer.html">Composer<i class="fas fa-angle-double-right"></i></a>
-          <a class="btn btn-outline-secondary" href="performer.html">Performer<i class="fas fa-angle-double-right"></i></a>
-          <a class="btn btn-outline-secondary" href="educator.html">Educator<i class="fas fa-angle-double-right"></i></a>
+          <a class="btn btn-outline-secondary" href="producer.html">Producer<i
+              class="fas fa-angle-double-right"></i></a>
+          <a class="btn btn-outline-secondary" href="composer.html">Composer<i
+              class="fas fa-angle-double-right"></i></a>
+          <a class="btn btn-outline-secondary" href="performer.html">Performer<i
+              class="fas fa-angle-double-right"></i></a>
+          <a class="btn btn-outline-secondary" href="educator.html">Educator<i
+              class="fas fa-angle-double-right"></i></a>
         </div>
 
       </div>
@@ -104,7 +113,8 @@
     <div class='footer'>
       <div>
         <ul class='icon-list'>
-          <li><a href="https://www.linkedin.com/in/patrick-johns-7884b02a/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/patrick-johns-7884b02a/" target="_blank"><i
+                class="fab fa-linkedin"></i></a></li>
           <li><a href="https://soundcloud.com/mywaymusicuk"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
           <li><a href="contact.html"><i class="fas fa-envelope"></i></a></li>
         </ul>
@@ -116,11 +126,17 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
-  
+
 
 </html>
