small fix to ul

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           Patrick Johns is a much in-demand freelancer, with a hugely varied portfolio: </p>
 
 
-        <ul>
+        <ul class=" mt-4">
           <li>Presenting live features on Scala Radio and ABC Radio (Australia) </li>
           <li>Producing radio programmes for BBC Radio 2 and BBC Radio 3 </li>
           <li>Presenting and producing the UK’s no.1 Music Education podcast, Teaching Notes </li>
@@ -84,12 +84,13 @@
 
 
 
-        <p>Patrick lives in London with his wife and three children, and enjoys watching Marx Brothers films, drinking
+        <p class="mt-4">Patrick lives in London with his wife and three children, and enjoys watching Marx Brothers
+          films, drinking
           leaf tea, and being unnecessarily pedantic about grammar. </p>
 
 
 
-        <p>Click on the links below to find out more. </p>
+        <p class="mt-4">Click on the links below to find out more. </p>
 
 
         <div class='btn-group port-btns'>
