--- a/producer.html
+++ b/producer.html
@@ -65,7 +65,7 @@
 
       <div class="row">
 
-        <div class='col-md-5 '>
+        <div class='col-md-5 text-center'>
           <a href="https://www.musicteachers.org/podcast 
 
             https://open.spotify.com/show/5dG4k0lPLLB3isiJVMPtU2?si=B0cHJ6UzTMar_O_YEc-QFA "><img class='edu-logo mt-4'
