small fix to card

--- a/producer.html
+++ b/producer.html
@@ -195,8 +195,8 @@
     </div>
 
 
-    <div class="card-columns">
-      <div class="card quote-card">
+    <div class="card-col mx-auto text-center">
+      <div class="card card-width quote-card">
         <div class="card-body">
           <blockquote class="card-title">“Speaking as a presenter, Patrick instils within you the confidence to shine.
             His diligent research, inherent knowledge and personality are a studio gift.” </blockquote>
@@ -206,7 +206,7 @@
       </div>
 
 
-      <div class="card quote-card">
+      <div class="card card-width quote-card">
         <div class="card-body">
           <blockquote class="card-title">“Patrick brings a wealth of production and music knowledge into the studio,
             but there is so much more. He is an ideas person, he cares deeply about the output, and he is always
@@ -220,7 +220,7 @@
 
 
 
-      <div class="card quote-card">
+      <div class="card card-width quote-card">
         <div class="card-body">
           <blockquote class="card-title">“Speaking as a presenter, Patrick instils within you the confidence to shine.
             His diligent research, inherent knowledge and personality are a studio gift.” </blockquote>
@@ -230,7 +230,7 @@
       </div>
 
 
-      <div class="card quote-card">
+      <div class="card card-width  quote-card">
         <div class="card-body">
           <blockquote class="card-title">“Patrick brought a real understanding and knowledge of each project we worked
             on. Perhaps more importantly, he dug in and found solutions and answers when needed, plus he’s a joy to
@@ -241,7 +241,7 @@
 
 
 
-      <div class="card quote-card">
+      <div class="card card-width  quote-card">
         <div class="card-body">
           <blockquote class="card-title">“Patrick Johns is the ideal foreign correspondent – always prepared, and
             thoroughly researched – yet also ready to talk about an unexpected topic with knowledge and authority. A
